--- a/style.css
+++ b/style.css
@@ -1,36 +1,41 @@
-body{
+body {
     background-color: #0a0a23;
-}
-#text{
-    background-color: #0a0a23;
-    color: white;
-    padding: 10px;
-}
-#game{
-    background-color: white;
-    color: white;
-    padding: 10px;
-    max-width: 500px;
-    max-height: 400px;
-    margin: 30px auto 0;
 }
 
-#controls, #stats{
+#text {
+    background-color: #0a0a23;
+    color: #ffffff;
+    padding: 10px;
+}
+
+#game {
+    max-width: 500px;
+    max-height: 400px;
+    background-color: #ffffff;
+    color: #ffffff;
+    margin: 30px auto 0;
+    padding: 10px;
+}
+
+#controls,
+#stats {
     border: 1px solid #0a0a23;
     padding: 5px;
     color: #0a0a23;
 }
 
-#monsterStats{
+#monsterStats {
     display: none;
     border: 1px solid #0a0a23;
     padding: 5px;
-    color: white;
+    color: #ffffff;
     background-color: #c70d0d;
 }
-.stat{
+
+.stat {
     padding-right: 10px;
 }
+
 button {
     cursor: pointer;
     color: #0a0a23;
